--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.9",
+        "@tailwindcss/typography": "^0.5.15",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
-        "laravel-vite-plugin": "^1.0",
+        "laravel-vite-plugin": "^1.0.5",
         "postcss": "^8.4.45",
         "tailwindcss": "^3.4.10",
-        "vite": "^5.0"
+        "vite": "^5.4.3"
     }
 }
