--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "providers": [
+            "App\\Providers\\ScheduleServiceProvider"
+        ]
         }
     },
     "config": {
