--- a/composer.json
+++ b/composer.json
@@ -52,9 +52,7 @@
     },
     "extra": {
         "laravel": {
-            "providers": [
-            "App\\Providers\\ScheduleServiceProvider"
-        ]
+            "dont-discover": []
         }
     },
     "config": {
